// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CrossCheckComments Should render correctly if there are anonymous comments 1`] = `
<div>
  <div
    class="ant-col"
  >
    <div
      class="ant-row"
      style="margin: 8px 0px;"
    >
      <div
        class="ant-col"
        style="padding-left: 4px; padding-right: 4px;"
      >
        <span
          class="ant-typography"
        >
          Student Contacts
        </span>
      </div>
      <div
        class="ant-col"
        style="padding-left: 4px; padding-right: 4px;"
      >
        <button
          aria-checked="true"
          class="ant-switch ant-switch-small ant-switch-checked"
          role="switch"
          type="button"
        >
          <div
            class="ant-switch-handle"
          />
          <span
            class="ant-switch-inner"
          />
        </button>
      </div>
    </div>
    <div
      class="ant-row"
    >
      <div
        class="ant-divider ant-divider-horizontal"
        role="separator"
        style="margin: 8px 0px;"
      />
    </div>
    <div
      class="ant-comment"
    >
      <div
        class="ant-comment-inner"
      >
        <div
          class="ant-comment-avatar"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-image"
            style="width: 32px; height: 32px; line-height: 32px; font-size: 18px;"
          >
            <img
              src="/static/svg/badges/ThankYou.svg"
            />
          </span>
        </div>
        <div
          class="ant-comment-content"
        >
          <div
            class="ant-comment-content-detail"
          >
            <div
              class="ant-row"
            >
              <span
                class="ant-typography"
              >
                Student
                 
                1
              </span>
            </div>
            <div
              class="ant-row"
            >
              <span
                class="ant-typography ant-typography-secondary"
                style="margin-bottom: 8px; font-size: 12px;"
              >
                2022-08-30 13:35
              </span>
            </div>
            <div
              class="ant-row ant-row-middle"
              style="margin-left: -2px; margin-right: -2px;"
            >
              <div
                class="ant-col"
                style="padding-left: 2px; padding-right: 2px;"
              >
                <span
                  aria-label="star"
                  class="anticon anticon-star"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="star"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512.5 190.4l-94.4 191.3-211.2 30.7 152.8 149-36.1 210.3 188.9-99.3 188.9 99.2-36.1-210.3 152.8-148.9-211.2-30.7z"
                      fill="#fffbf0"
                    />
                    <path
                      d="M908.6 352.8l-253.9-36.9L541.2 85.8c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L370.3 315.9l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1L239 839.4a31.95 31.95 0 0046.4 33.7l227.1-119.4 227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3zM665.3 561.3l36.1 210.3-188.9-99.2-188.9 99.3 36.1-210.3-152.8-149 211.2-30.7 94.4-191.3 94.4 191.3 211.2 30.7-152.8 148.9z"
                      fill="#ffa940"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="ant-col"
                style="padding-left: 2px; padding-right: 2px;"
              >
                <span
                  class="ant-typography"
                >
                  5
                </span>
              </div>
            </div>
            <div
              class="ant-row"
              style="margin-bottom: 10px;"
            >
              <span
                class="ant-typography ant-typography-secondary"
                style="font-size: 12px; line-height: 12px;"
              >
                maximum score: 
                100
              </span>
            </div>
            <div
              class="ant-row"
              style="margin-bottom: 10px;"
            >
              <button
                class="ant-btn ant-btn-default"
                type="button"
              >
                <span>
                  Show detailed feedback
                </span>
              </button>
            </div>
            <div
              class="ant-row"
            >
              <span
                class="ant-typography"
              >
                <p>
                  Awful job, you better quit programming and learn to cross stitch.
                </p>
              </span>
            </div>
            <div
              class="ant-row"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row"
    >
      <div
        class="ant-divider ant-divider-horizontal"
        role="separator"
        style="margin: 8px 0px;"
      />
    </div>
    <div
      class="ant-comment"
    >
      <div
        class="ant-comment-inner"
      >
        <div
          class="ant-comment-avatar"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-image"
            style="width: 32px; height: 32px; line-height: 32px; font-size: 18px;"
          >
            <img
              src="/static/svg/badges/ThankYou.svg"
            />
          </span>
        </div>
        <div
          class="ant-comment-content"
        >
          <div
            class="ant-comment-content-detail"
          >
            <div
              class="ant-row"
            >
              <span
                class="ant-typography"
              >
                Student
                 
                2
              </span>
            </div>
            <div
              class="ant-row"
            >
              <span
                class="ant-typography ant-typography-secondary"
                style="margin-bottom: 8px; font-size: 12px;"
              >
                2022-08-30 13:35
              </span>
            </div>
            <div
              class="ant-row ant-row-middle"
              style="margin-left: -2px; margin-right: -2px;"
            >
              <div
                class="ant-col"
                style="padding-left: 2px; padding-right: 2px;"
              >
                <span
                  aria-label="star"
                  class="anticon anticon-star"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="star"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512.5 190.4l-94.4 191.3-211.2 30.7 152.8 149-36.1 210.3 188.9-99.3 188.9 99.2-36.1-210.3 152.8-148.9-211.2-30.7z"
                      fill="#fffbf0"
                    />
                    <path
                      d="M908.6 352.8l-253.9-36.9L541.2 85.8c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L370.3 315.9l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1L239 839.4a31.95 31.95 0 0046.4 33.7l227.1-119.4 227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3zM665.3 561.3l36.1 210.3-188.9-99.2-188.9 99.3 36.1-210.3-152.8-149 211.2-30.7 94.4-191.3 94.4 191.3 211.2 30.7-152.8 148.9z"
                      fill="#ffa940"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="ant-col"
                style="padding-left: 2px; padding-right: 2px;"
              >
                <span
                  class="ant-typography"
                >
                  5
                </span>
              </div>
            </div>
            <div
              class="ant-row"
              style="margin-bottom: 10px;"
            >
              <span
                class="ant-typography ant-typography-secondary"
                style="font-size: 12px; line-height: 12px;"
              >
                maximum score: 
                100
              </span>
            </div>
            <div
              class="ant-row"
              style="margin-bottom: 10px;"
            >
              <button
                class="ant-btn ant-btn-default"
                type="button"
              >
                <span>
                  Show detailed feedback
                </span>
              </button>
            </div>
            <div
              class="ant-row"
            >
              <span
                class="ant-typography"
              >
                <p>
                  Awful job, you better quit programming and learn to cross stitch.
                </p>
              </span>
            </div>
            <div
              class="ant-row"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row"
    >
      <div
        class="ant-divider ant-divider-horizontal"
        role="separator"
        style="margin: 8px 0px;"
      />
    </div>
    <div
      class="ant-comment"
    >
      <div
        class="ant-comment-inner"
      >
        <div
          class="ant-comment-avatar"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-image"
            style="width: 32px; height: 32px; line-height: 32px; font-size: 18px;"
          >
            <img
              src="/static/svg/badges/ThankYou.svg"
            />
          </span>
        </div>
        <div
          class="ant-comment-content"
        >
          <div
            class="ant-comment-content-detail"
          >
            <div
              class="ant-row"
            >
              <span
                class="ant-typography"
              >
                Student
                 
                3
              </span>
            </div>
            <div
              class="ant-row"
            >
              <span
                class="ant-typography ant-typography-secondary"
                style="margin-bottom: 8px; font-size: 12px;"
              >
                2022-08-30 13:35
              </span>
            </div>
            <div
              class="ant-row ant-row-middle"
              style="margin-left: -2px; margin-right: -2px;"
            >
              <div
                class="ant-col"
                style="padding-left: 2px; padding-right: 2px;"
              >
                <span
                  aria-label="star"
                  class="anticon anticon-star"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="star"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512.5 190.4l-94.4 191.3-211.2 30.7 152.8 149-36.1 210.3 188.9-99.3 188.9 99.2-36.1-210.3 152.8-148.9-211.2-30.7z"
                      fill="#fffbf0"
                    />
                    <path
                      d="M908.6 352.8l-253.9-36.9L541.2 85.8c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L370.3 315.9l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1L239 839.4a31.95 31.95 0 0046.4 33.7l227.1-119.4 227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3zM665.3 561.3l36.1 210.3-188.9-99.2-188.9 99.3 36.1-210.3-152.8-149 211.2-30.7 94.4-191.3 94.4 191.3 211.2 30.7-152.8 148.9z"
                      fill="#ffa940"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="ant-col"
                style="padding-left: 2px; padding-right: 2px;"
              >
                <span
                  class="ant-typography"
                >
                  5
                </span>
              </div>
            </div>
            <div
              class="ant-row"
              style="margin-bottom: 10px;"
            >
              <span
                class="ant-typography ant-typography-secondary"
                style="font-size: 12px; line-height: 12px;"
              >
                maximum score: 
                100
              </span>
            </div>
            <div
              class="ant-row"
              style="margin-bottom: 10px;"
            >
              <button
                class="ant-btn ant-btn-default"
                type="button"
              >
                <span>
                  Show detailed feedback
                </span>
              </button>
            </div>
            <div
              class="ant-row"
            >
              <span
                class="ant-typography"
              >
                <p>
                  Awful job, you better quit programming and learn to cross stitch.
                </p>
              </span>
            </div>
            <div
              class="ant-row"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CrossCheckComments Should render correctly if there are both types of comments 1`] = `
<div>
  <div
    class="ant-col"
  >
    <div
      class="ant-row"
      style="margin: 8px 0px;"
    >
      <div
        class="ant-col"
        style="padding-left: 4px; padding-right: 4px;"
      >
        <span
          class="ant-typography"
        >
          Student Contacts
        </span>
      </div>
      <div
        class="ant-col"
        style="padding-left: 4px; padding-right: 4px;"
      >
        <button
          aria-checked="true"
          class="ant-switch ant-switch-small ant-switch-checked"
          role="switch"
          type="button"
        >
          <div
            class="ant-switch-handle"
          />
          <span
            class="ant-switch-inner"
          />
        </button>
      </div>
    </div>
    <div
      class="ant-row"
    >
      <div
        class="ant-divider ant-divider-horizontal"
        role="separator"
        style="margin: 8px 0px;"
      />
    </div>
    <div
      class="ant-comment"
    >
      <div
        class="ant-comment-inner"
      >
        <div
          class="ant-comment-avatar"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-image"
            style="width: 32px; height: 32px; line-height: 32px; font-size: 18px;"
          >
            <img
              src="/static/svg/badges/ThankYou.svg"
            />
          </span>
        </div>
        <div
          class="ant-comment-content"
        >
          <div
            class="ant-comment-content-detail"
          >
            <div
              class="ant-row"
            >
              <span
                class="ant-typography"
              >
                Student
                 
                1
              </span>
            </div>
            <div
              class="ant-row"
            >
              <span
                class="ant-typography ant-typography-secondary"
                style="margin-bottom: 8px; font-size: 12px;"
              >
                2022-08-30 13:35
              </span>
            </div>
            <div
              class="ant-row ant-row-middle"
              style="margin-left: -2px; margin-right: -2px;"
            >
              <div
                class="ant-col"
                style="padding-left: 2px; padding-right: 2px;"
              >
                <span
                  aria-label="star"
                  class="anticon anticon-star"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="star"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512.5 190.4l-94.4 191.3-211.2 30.7 152.8 149-36.1 210.3 188.9-99.3 188.9 99.2-36.1-210.3 152.8-148.9-211.2-30.7z"
                      fill="#fffbf0"
                    />
                    <path
                      d="M908.6 352.8l-253.9-36.9L541.2 85.8c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L370.3 315.9l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1L239 839.4a31.95 31.95 0 0046.4 33.7l227.1-119.4 227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3zM665.3 561.3l36.1 210.3-188.9-99.2-188.9 99.3 36.1-210.3-152.8-149 211.2-30.7 94.4-191.3 94.4 191.3 211.2 30.7-152.8 148.9z"
                      fill="#ffa940"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="ant-col"
                style="padding-left: 2px; padding-right: 2px;"
              >
                <span
                  class="ant-typography"
                >
                  5
                </span>
              </div>
            </div>
            <div
              class="ant-row"
              style="margin-bottom: 10px;"
            >
              <span
                class="ant-typography ant-typography-secondary"
                style="font-size: 12px; line-height: 12px;"
              >
                maximum score: 
                100
              </span>
            </div>
            <div
              class="ant-row"
              style="margin-bottom: 10px;"
            >
              <button
                class="ant-btn ant-btn-default"
                type="button"
              >
                <span>
                  Show detailed feedback
                </span>
              </button>
            </div>
            <div
              class="ant-row"
            >
              <span
                class="ant-typography"
              >
                <p>
                  Awful job, you better quit programming and learn to cross stitch.
                </p>
              </span>
            </div>
            <div
              class="ant-row"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row"
    >
      <div
        class="ant-divider ant-divider-horizontal"
        role="separator"
        style="margin: 8px 0px;"
      />
    </div>
    <div
      class="ant-comment"
    >
      <div
        class="ant-comment-inner"
      >
        <div
          class="ant-comment-avatar"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-image"
            style="width: 32px; height: 32px; line-height: 32px; font-size: 18px;"
          >
            <img
              src="/static/svg/badges/ThankYou.svg"
            />
          </span>
        </div>
        <div
          class="ant-comment-content"
        >
          <div
            class="ant-comment-content-detail"
          >
            <div
              class="ant-row"
            >
              <span
                class="ant-typography"
              >
                Student
                 
                2
              </span>
            </div>
            <div
              class="ant-row"
            >
              <span
                class="ant-typography ant-typography-secondary"
                style="margin-bottom: 8px; font-size: 12px;"
              >
                2022-08-30 13:35
              </span>
            </div>
            <div
              class="ant-row ant-row-middle"
              style="margin-left: -2px; margin-right: -2px;"
            >
              <div
                class="ant-col"
                style="padding-left: 2px; padding-right: 2px;"
              >
                <span
                  aria-label="star"
                  class="anticon anticon-star"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="star"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512.5 190.4l-94.4 191.3-211.2 30.7 152.8 149-36.1 210.3 188.9-99.3 188.9 99.2-36.1-210.3 152.8-148.9-211.2-30.7z"
                      fill="#fffbf0"
                    />
                    <path
                      d="M908.6 352.8l-253.9-36.9L541.2 85.8c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L370.3 315.9l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1L239 839.4a31.95 31.95 0 0046.4 33.7l227.1-119.4 227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3zM665.3 561.3l36.1 210.3-188.9-99.2-188.9 99.3 36.1-210.3-152.8-149 211.2-30.7 94.4-191.3 94.4 191.3 211.2 30.7-152.8 148.9z"
                      fill="#ffa940"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="ant-col"
                style="padding-left: 2px; padding-right: 2px;"
              >
                <span
                  class="ant-typography"
                >
                  5
                </span>
              </div>
            </div>
            <div
              class="ant-row"
              style="margin-bottom: 10px;"
            >
              <span
                class="ant-typography ant-typography-secondary"
                style="font-size: 12px; line-height: 12px;"
              >
                maximum score: 
                100
              </span>
            </div>
            <div
              class="ant-row"
              style="margin-bottom: 10px;"
            >
              <button
                class="ant-btn ant-btn-default"
                type="button"
              >
                <span>
                  Show detailed feedback
                </span>
              </button>
            </div>
            <div
              class="ant-row"
            >
              <span
                class="ant-typography"
              >
                <p>
                  Awful job, you better quit programming and learn to cross stitch.
                </p>
              </span>
            </div>
            <div
              class="ant-row"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row"
    >
      <div
        class="ant-divider ant-divider-horizontal"
        role="separator"
        style="margin: 8px 0px;"
      />
    </div>
    <div
      class="ant-comment"
    >
      <div
        class="ant-comment-inner"
      >
        <div
          class="ant-comment-avatar"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-image"
            style="width: 32px; height: 32px; line-height: 32px; font-size: 18px;"
          >
            <img
              src="https://cdn.rs.school/avatars/torvalds.png?size=48"
            />
          </span>
        </div>
        <div
          class="ant-comment-content"
        >
          <div
            class="ant-comment-content-detail"
          >
            <div
              class="ant-row"
            >
              <div
                class="jsx-73373418f14ff6c link-user"
              >
                <a
                  class="jsx-73373418f14ff6c link-user-profile"
                  href="/profile?githubId=torvalds"
                  target="_blank"
                >
                  torvalds
                </a>
                 
                <a
                  class="jsx-73373418f14ff6c link-user-github"
                  href="https://github.com/torvalds"
                  target="_blank"
                >
                  <span
                    aria-label="github"
                    class="anticon anticon-github"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="github"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M511.6 76.3C264.3 76.2 64 276.4 64 523.5 64 718.9 189.3 885 363.8 946c23.5 5.9 19.9-10.8 19.9-22.2v-77.5c-135.7 15.9-141.2-73.9-150.3-88.9C215 726 171.5 718 184.5 703c30.9-15.9 62.4 4 98.9 57.9 26.4 39.1 77.9 32.5 104 26 5.7-23.5 17.9-44.5 34.7-60.8-140.6-25.2-199.2-111-199.2-213 0-49.5 16.3-95 48.3-131.7-20.4-60.5 1.9-112.3 4.9-120 58.1-5.2 118.5 41.6 123.2 45.3 33-8.9 70.7-13.6 112.9-13.6 42.4 0 80.2 4.9 113.5 13.9 11.3-8.6 67.3-48.8 121.3-43.9 2.9 7.7 24.7 58.3 5.5 118 32.4 36.8 48.9 82.7 48.9 132.3 0 102.2-59 188.1-200 212.9a127.5 127.5 0 0138.1 91v112.5c.8 9 0 17.9 15 17.9 177.1-59.7 304.6-227 304.6-424.1 0-247.2-200.4-447.3-447.5-447.3z"
                      />
                    </svg>
                  </span>
                </a>
              </div>
            </div>
            <div
              class="ant-row"
            >
              <span
                class="ant-typography ant-typography-secondary"
                style="margin-bottom: 8px; font-size: 12px;"
              >
                2022-08-27 09:51
              </span>
            </div>
            <div
              class="ant-row ant-row-middle"
              style="margin-left: -2px; margin-right: -2px;"
            >
              <div
                class="ant-col"
                style="padding-left: 2px; padding-right: 2px;"
              >
                <span
                  aria-label="star"
                  class="anticon anticon-star"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="star"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512.5 190.4l-94.4 191.3-211.2 30.7 152.8 149-36.1 210.3 188.9-99.3 188.9 99.2-36.1-210.3 152.8-148.9-211.2-30.7z"
                      fill="#f6ffed"
                    />
                    <path
                      d="M908.6 352.8l-253.9-36.9L541.2 85.8c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L370.3 315.9l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1L239 839.4a31.95 31.95 0 0046.4 33.7l227.1-119.4 227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3zM665.3 561.3l36.1 210.3-188.9-99.2-188.9 99.3 36.1-210.3-152.8-149 211.2-30.7 94.4-191.3 94.4 191.3 211.2 30.7-152.8 148.9z"
                      fill="#52c41a"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="ant-col"
                style="padding-left: 2px; padding-right: 2px;"
              >
                <span
                  class="ant-typography"
                >
                  100
                </span>
              </div>
            </div>
            <div
              class="ant-row"
              style="margin-bottom: 10px;"
            >
              <span
                class="ant-typography ant-typography-secondary"
                style="font-size: 12px; line-height: 12px;"
              >
                maximum score: 
                100
              </span>
            </div>
            <div
              class="ant-row"
              style="margin-bottom: 10px;"
            >
              <button
                class="ant-btn ant-btn-default"
                type="button"
              >
                <span>
                  Show detailed feedback
                </span>
              </button>
            </div>
            <div
              class="ant-row"
            >
              <span
                class="ant-typography"
              >
                <p>
                  Great job, you better quit cross stitching and start programming.
                </p>
              </span>
            </div>
            <div
              class="ant-row"
            >
              <div
                class="ant-typography"
                style="margin: 0px;"
              >
                Student Discord:
                 
                <a
                  class="ant-typography"
                  href="https://discordapp.com/users/123456789012345678"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  @LinusTorvalds#234
                </a>
                 
                <button
                  class="ant-btn ant-btn-dashed ant-btn-icon-only"
                  type="button"
                >
                  <span
                    aria-label="copy"
                    class="anticon anticon-copy"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="copy"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M232 706h142c22.1 0 40 17.9 40 40v142h250V264H232v442z"
                        fill="#e6f7ff"
                      />
                      <path
                        d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32z"
                        fill="#1890ff"
                      />
                      <path
                        d="M704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                        fill="#1890ff"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row"
    >
      <div
        class="ant-divider ant-divider-horizontal"
        role="separator"
        style="margin: 8px 0px;"
      />
    </div>
    <div
      class="ant-comment"
    >
      <div
        class="ant-comment-inner"
      >
        <div
          class="ant-comment-avatar"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-image"
            style="width: 32px; height: 32px; line-height: 32px; font-size: 18px;"
          >
            <img
              src="https://cdn.rs.school/avatars/torvalds.png?size=48"
            />
          </span>
        </div>
        <div
          class="ant-comment-content"
        >
          <div
            class="ant-comment-content-detail"
          >
            <div
              class="ant-row"
            >
              <div
                class="jsx-73373418f14ff6c link-user"
              >
                <a
                  class="jsx-73373418f14ff6c link-user-profile"
                  href="/profile?githubId=torvalds"
                  target="_blank"
                >
                  torvalds
                </a>
                 
                <a
                  class="jsx-73373418f14ff6c link-user-github"
                  href="https://github.com/torvalds"
                  target="_blank"
                >
                  <span
                    aria-label="github"
                    class="anticon anticon-github"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="github"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M511.6 76.3C264.3 76.2 64 276.4 64 523.5 64 718.9 189.3 885 363.8 946c23.5 5.9 19.9-10.8 19.9-22.2v-77.5c-135.7 15.9-141.2-73.9-150.3-88.9C215 726 171.5 718 184.5 703c30.9-15.9 62.4 4 98.9 57.9 26.4 39.1 77.9 32.5 104 26 5.7-23.5 17.9-44.5 34.7-60.8-140.6-25.2-199.2-111-199.2-213 0-49.5 16.3-95 48.3-131.7-20.4-60.5 1.9-112.3 4.9-120 58.1-5.2 118.5 41.6 123.2 45.3 33-8.9 70.7-13.6 112.9-13.6 42.4 0 80.2 4.9 113.5 13.9 11.3-8.6 67.3-48.8 121.3-43.9 2.9 7.7 24.7 58.3 5.5 118 32.4 36.8 48.9 82.7 48.9 132.3 0 102.2-59 188.1-200 212.9a127.5 127.5 0 0138.1 91v112.5c.8 9 0 17.9 15 17.9 177.1-59.7 304.6-227 304.6-424.1 0-247.2-200.4-447.3-447.5-447.3z"
                      />
                    </svg>
                  </span>
                </a>
              </div>
            </div>
            <div
              class="ant-row"
            >
              <span
                class="ant-typography ant-typography-secondary"
                style="margin-bottom: 8px; font-size: 12px;"
              >
                2022-08-27 09:51
              </span>
            </div>
            <div
              class="ant-row ant-row-middle"
              style="margin-left: -2px; margin-right: -2px;"
            >
              <div
                class="ant-col"
                style="padding-left: 2px; padding-right: 2px;"
              >
                <span
                  aria-label="star"
                  class="anticon anticon-star"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="star"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512.5 190.4l-94.4 191.3-211.2 30.7 152.8 149-36.1 210.3 188.9-99.3 188.9 99.2-36.1-210.3 152.8-148.9-211.2-30.7z"
                      fill="#f6ffed"
                    />
                    <path
                      d="M908.6 352.8l-253.9-36.9L541.2 85.8c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L370.3 315.9l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1L239 839.4a31.95 31.95 0 0046.4 33.7l227.1-119.4 227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3zM665.3 561.3l36.1 210.3-188.9-99.2-188.9 99.3 36.1-210.3-152.8-149 211.2-30.7 94.4-191.3 94.4 191.3 211.2 30.7-152.8 148.9z"
                      fill="#52c41a"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="ant-col"
                style="padding-left: 2px; padding-right: 2px;"
              >
                <span
                  class="ant-typography"
                >
                  100
                </span>
              </div>
            </div>
            <div
              class="ant-row"
              style="margin-bottom: 10px;"
            >
              <span
                class="ant-typography ant-typography-secondary"
                style="font-size: 12px; line-height: 12px;"
              >
                maximum score: 
                100
              </span>
            </div>
            <div
              class="ant-row"
              style="margin-bottom: 10px;"
            >
              <button
                class="ant-btn ant-btn-default"
                type="button"
              >
                <span>
                  Show detailed feedback
                </span>
              </button>
            </div>
            <div
              class="ant-row"
            >
              <span
                class="ant-typography"
              >
                <p>
                  Great job, you better quit cross stitching and start programming.
                </p>
              </span>
            </div>
            <div
              class="ant-row"
            >
              <div
                class="ant-typography"
                style="margin: 0px;"
              >
                Student Discord:
                 
                <a
                  class="ant-typography"
                  href="https://discordapp.com/users/123456789012345678"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  @LinusTorvalds#234
                </a>
                 
                <button
                  class="ant-btn ant-btn-dashed ant-btn-icon-only"
                  type="button"
                >
                  <span
                    aria-label="copy"
                    class="anticon anticon-copy"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="copy"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M232 706h142c22.1 0 40 17.9 40 40v142h250V264H232v442z"
                        fill="#e6f7ff"
                      />
                      <path
                        d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32z"
                        fill="#1890ff"
                      />
                      <path
                        d="M704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                        fill="#1890ff"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row"
    >
      <div
        class="ant-divider ant-divider-horizontal"
        role="separator"
        style="margin: 8px 0px;"
      />
    </div>
    <div
      class="ant-comment"
    >
      <div
        class="ant-comment-inner"
      >
        <div
          class="ant-comment-avatar"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-image"
            style="width: 32px; height: 32px; line-height: 32px; font-size: 18px;"
          >
            <img
              src="/static/svg/badges/ThankYou.svg"
            />
          </span>
        </div>
        <div
          class="ant-comment-content"
        >
          <div
            class="ant-comment-content-detail"
          >
            <div
              class="ant-row"
            >
              <span
                class="ant-typography"
              >
                Student
                 
                5
              </span>
            </div>
            <div
              class="ant-row"
            >
              <span
                class="ant-typography ant-typography-secondary"
                style="margin-bottom: 8px; font-size: 12px;"
              >
                2022-08-30 13:35
              </span>
            </div>
            <div
              class="ant-row ant-row-middle"
              style="margin-left: -2px; margin-right: -2px;"
            >
              <div
                class="ant-col"
                style="padding-left: 2px; padding-right: 2px;"
              >
                <span
                  aria-label="star"
                  class="anticon anticon-star"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="star"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512.5 190.4l-94.4 191.3-211.2 30.7 152.8 149-36.1 210.3 188.9-99.3 188.9 99.2-36.1-210.3 152.8-148.9-211.2-30.7z"
                      fill="#fffbf0"
                    />
                    <path
                      d="M908.6 352.8l-253.9-36.9L541.2 85.8c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L370.3 315.9l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1L239 839.4a31.95 31.95 0 0046.4 33.7l227.1-119.4 227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3zM665.3 561.3l36.1 210.3-188.9-99.2-188.9 99.3 36.1-210.3-152.8-149 211.2-30.7 94.4-191.3 94.4 191.3 211.2 30.7-152.8 148.9z"
                      fill="#ffa940"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="ant-col"
                style="padding-left: 2px; padding-right: 2px;"
              >
                <span
                  class="ant-typography"
                >
                  5
                </span>
              </div>
            </div>
            <div
              class="ant-row"
              style="margin-bottom: 10px;"
            >
              <span
                class="ant-typography ant-typography-secondary"
                style="font-size: 12px; line-height: 12px;"
              >
                maximum score: 
                100
              </span>
            </div>
            <div
              class="ant-row"
              style="margin-bottom: 10px;"
            >
              <button
                class="ant-btn ant-btn-default"
                type="button"
              >
                <span>
                  Show detailed feedback
                </span>
              </button>
            </div>
            <div
              class="ant-row"
            >
              <span
                class="ant-typography"
              >
                <p>
                  Awful job, you better quit programming and learn to cross stitch.
                </p>
              </span>
            </div>
            <div
              class="ant-row"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CrossCheckComments Should render correctly if there are signed comments 1`] = `
<div>
  <div
    class="ant-col"
  >
    <div
      class="ant-row"
      style="margin: 8px 0px;"
    >
      <div
        class="ant-col"
        style="padding-left: 4px; padding-right: 4px;"
      >
        <span
          class="ant-typography"
        >
          Student Contacts
        </span>
      </div>
      <div
        class="ant-col"
        style="padding-left: 4px; padding-right: 4px;"
      >
        <button
          aria-checked="true"
          class="ant-switch ant-switch-small ant-switch-checked"
          role="switch"
          type="button"
        >
          <div
            class="ant-switch-handle"
          />
          <span
            class="ant-switch-inner"
          />
        </button>
      </div>
    </div>
    <div
      class="ant-row"
    >
      <div
        class="ant-divider ant-divider-horizontal"
        role="separator"
        style="margin: 8px 0px;"
      />
    </div>
    <div
      class="ant-comment"
    >
      <div
        class="ant-comment-inner"
      >
        <div
          class="ant-comment-avatar"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-image"
            style="width: 32px; height: 32px; line-height: 32px; font-size: 18px;"
          >
            <img
              src="https://cdn.rs.school/avatars/torvalds.png?size=48"
            />
          </span>
        </div>
        <div
          class="ant-comment-content"
        >
          <div
            class="ant-comment-content-detail"
          >
            <div
              class="ant-row"
            >
              <div
                class="jsx-73373418f14ff6c link-user"
              >
                <a
                  class="jsx-73373418f14ff6c link-user-profile"
                  href="/profile?githubId=torvalds"
                  target="_blank"
                >
                  torvalds
                </a>
                 
                <a
                  class="jsx-73373418f14ff6c link-user-github"
                  href="https://github.com/torvalds"
                  target="_blank"
                >
                  <span
                    aria-label="github"
                    class="anticon anticon-github"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="github"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M511.6 76.3C264.3 76.2 64 276.4 64 523.5 64 718.9 189.3 885 363.8 946c23.5 5.9 19.9-10.8 19.9-22.2v-77.5c-135.7 15.9-141.2-73.9-150.3-88.9C215 726 171.5 718 184.5 703c30.9-15.9 62.4 4 98.9 57.9 26.4 39.1 77.9 32.5 104 26 5.7-23.5 17.9-44.5 34.7-60.8-140.6-25.2-199.2-111-199.2-213 0-49.5 16.3-95 48.3-131.7-20.4-60.5 1.9-112.3 4.9-120 58.1-5.2 118.5 41.6 123.2 45.3 33-8.9 70.7-13.6 112.9-13.6 42.4 0 80.2 4.9 113.5 13.9 11.3-8.6 67.3-48.8 121.3-43.9 2.9 7.7 24.7 58.3 5.5 118 32.4 36.8 48.9 82.7 48.9 132.3 0 102.2-59 188.1-200 212.9a127.5 127.5 0 0138.1 91v112.5c.8 9 0 17.9 15 17.9 177.1-59.7 304.6-227 304.6-424.1 0-247.2-200.4-447.3-447.5-447.3z"
                      />
                    </svg>
                  </span>
                </a>
              </div>
            </div>
            <div
              class="ant-row"
            >
              <span
                class="ant-typography ant-typography-secondary"
                style="margin-bottom: 8px; font-size: 12px;"
              >
                2022-08-27 09:51
              </span>
            </div>
            <div
              class="ant-row ant-row-middle"
              style="margin-left: -2px; margin-right: -2px;"
            >
              <div
                class="ant-col"
                style="padding-left: 2px; padding-right: 2px;"
              >
                <span
                  aria-label="star"
                  class="anticon anticon-star"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="star"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512.5 190.4l-94.4 191.3-211.2 30.7 152.8 149-36.1 210.3 188.9-99.3 188.9 99.2-36.1-210.3 152.8-148.9-211.2-30.7z"
                      fill="#f6ffed"
                    />
                    <path
                      d="M908.6 352.8l-253.9-36.9L541.2 85.8c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L370.3 315.9l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1L239 839.4a31.95 31.95 0 0046.4 33.7l227.1-119.4 227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3zM665.3 561.3l36.1 210.3-188.9-99.2-188.9 99.3 36.1-210.3-152.8-149 211.2-30.7 94.4-191.3 94.4 191.3 211.2 30.7-152.8 148.9z"
                      fill="#52c41a"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="ant-col"
                style="padding-left: 2px; padding-right: 2px;"
              >
                <span
                  class="ant-typography"
                >
                  100
                </span>
              </div>
            </div>
            <div
              class="ant-row"
              style="margin-bottom: 10px;"
            >
              <span
                class="ant-typography ant-typography-secondary"
                style="font-size: 12px; line-height: 12px;"
              >
                maximum score: 
                100
              </span>
            </div>
            <div
              class="ant-row"
              style="margin-bottom: 10px;"
            >
              <button
                class="ant-btn ant-btn-default"
                type="button"
              >
                <span>
                  Show detailed feedback
                </span>
              </button>
            </div>
            <div
              class="ant-row"
            >
              <span
                class="ant-typography"
              >
                <p>
                  Great job, you better quit cross stitching and start programming.
                </p>
              </span>
            </div>
            <div
              class="ant-row"
            >
              <div
                class="ant-typography"
                style="margin: 0px;"
              >
                Student Discord:
                 
                <a
                  class="ant-typography"
                  href="https://discordapp.com/users/123456789012345678"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  @LinusTorvalds#234
                </a>
                 
                <button
                  class="ant-btn ant-btn-dashed ant-btn-icon-only"
                  type="button"
                >
                  <span
                    aria-label="copy"
                    class="anticon anticon-copy"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="copy"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M232 706h142c22.1 0 40 17.9 40 40v142h250V264H232v442z"
                        fill="#e6f7ff"
                      />
                      <path
                        d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32z"
                        fill="#1890ff"
                      />
                      <path
                        d="M704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                        fill="#1890ff"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row"
    >
      <div
        class="ant-divider ant-divider-horizontal"
        role="separator"
        style="margin: 8px 0px;"
      />
    </div>
    <div
      class="ant-comment"
    >
      <div
        class="ant-comment-inner"
      >
        <div
          class="ant-comment-avatar"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-image"
            style="width: 32px; height: 32px; line-height: 32px; font-size: 18px;"
          >
            <img
              src="https://cdn.rs.school/avatars/torvalds.png?size=48"
            />
          </span>
        </div>
        <div
          class="ant-comment-content"
        >
          <div
            class="ant-comment-content-detail"
          >
            <div
              class="ant-row"
            >
              <div
                class="jsx-73373418f14ff6c link-user"
              >
                <a
                  class="jsx-73373418f14ff6c link-user-profile"
                  href="/profile?githubId=torvalds"
                  target="_blank"
                >
                  torvalds
                </a>
                 
                <a
                  class="jsx-73373418f14ff6c link-user-github"
                  href="https://github.com/torvalds"
                  target="_blank"
                >
                  <span
                    aria-label="github"
                    class="anticon anticon-github"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="github"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M511.6 76.3C264.3 76.2 64 276.4 64 523.5 64 718.9 189.3 885 363.8 946c23.5 5.9 19.9-10.8 19.9-22.2v-77.5c-135.7 15.9-141.2-73.9-150.3-88.9C215 726 171.5 718 184.5 703c30.9-15.9 62.4 4 98.9 57.9 26.4 39.1 77.9 32.5 104 26 5.7-23.5 17.9-44.5 34.7-60.8-140.6-25.2-199.2-111-199.2-213 0-49.5 16.3-95 48.3-131.7-20.4-60.5 1.9-112.3 4.9-120 58.1-5.2 118.5 41.6 123.2 45.3 33-8.9 70.7-13.6 112.9-13.6 42.4 0 80.2 4.9 113.5 13.9 11.3-8.6 67.3-48.8 121.3-43.9 2.9 7.7 24.7 58.3 5.5 118 32.4 36.8 48.9 82.7 48.9 132.3 0 102.2-59 188.1-200 212.9a127.5 127.5 0 0138.1 91v112.5c.8 9 0 17.9 15 17.9 177.1-59.7 304.6-227 304.6-424.1 0-247.2-200.4-447.3-447.5-447.3z"
                      />
                    </svg>
                  </span>
                </a>
              </div>
            </div>
            <div
              class="ant-row"
            >
              <span
                class="ant-typography ant-typography-secondary"
                style="margin-bottom: 8px; font-size: 12px;"
              >
                2022-08-27 09:51
              </span>
            </div>
            <div
              class="ant-row ant-row-middle"
              style="margin-left: -2px; margin-right: -2px;"
            >
              <div
                class="ant-col"
                style="padding-left: 2px; padding-right: 2px;"
              >
                <span
                  aria-label="star"
                  class="anticon anticon-star"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="star"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512.5 190.4l-94.4 191.3-211.2 30.7 152.8 149-36.1 210.3 188.9-99.3 188.9 99.2-36.1-210.3 152.8-148.9-211.2-30.7z"
                      fill="#f6ffed"
                    />
                    <path
                      d="M908.6 352.8l-253.9-36.9L541.2 85.8c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L370.3 315.9l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1L239 839.4a31.95 31.95 0 0046.4 33.7l227.1-119.4 227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3zM665.3 561.3l36.1 210.3-188.9-99.2-188.9 99.3 36.1-210.3-152.8-149 211.2-30.7 94.4-191.3 94.4 191.3 211.2 30.7-152.8 148.9z"
                      fill="#52c41a"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="ant-col"
                style="padding-left: 2px; padding-right: 2px;"
              >
                <span
                  class="ant-typography"
                >
                  100
                </span>
              </div>
            </div>
            <div
              class="ant-row"
              style="margin-bottom: 10px;"
            >
              <span
                class="ant-typography ant-typography-secondary"
                style="font-size: 12px; line-height: 12px;"
              >
                maximum score: 
                100
              </span>
            </div>
            <div
              class="ant-row"
              style="margin-bottom: 10px;"
            >
              <button
                class="ant-btn ant-btn-default"
                type="button"
              >
                <span>
                  Show detailed feedback
                </span>
              </button>
            </div>
            <div
              class="ant-row"
            >
              <span
                class="ant-typography"
              >
                <p>
                  Great job, you better quit cross stitching and start programming.
                </p>
              </span>
            </div>
            <div
              class="ant-row"
            >
              <div
                class="ant-typography"
                style="margin: 0px;"
              >
                Student Discord:
                 
                <a
                  class="ant-typography"
                  href="https://discordapp.com/users/123456789012345678"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  @LinusTorvalds#234
                </a>
                 
                <button
                  class="ant-btn ant-btn-dashed ant-btn-icon-only"
                  type="button"
                >
                  <span
                    aria-label="copy"
                    class="anticon anticon-copy"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="copy"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M232 706h142c22.1 0 40 17.9 40 40v142h250V264H232v442z"
                        fill="#e6f7ff"
                      />
                      <path
                        d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32z"
                        fill="#1890ff"
                      />
                      <path
                        d="M704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                        fill="#1890ff"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row"
    >
      <div
        class="ant-divider ant-divider-horizontal"
        role="separator"
        style="margin: 8px 0px;"
      />
    </div>
    <div
      class="ant-comment"
    >
      <div
        class="ant-comment-inner"
      >
        <div
          class="ant-comment-avatar"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-image"
            style="width: 32px; height: 32px; line-height: 32px; font-size: 18px;"
          >
            <img
              src="https://cdn.rs.school/avatars/torvalds.png?size=48"
            />
          </span>
        </div>
        <div
          class="ant-comment-content"
        >
          <div
            class="ant-comment-content-detail"
          >
            <div
              class="ant-row"
            >
              <div
                class="jsx-73373418f14ff6c link-user"
              >
                <a
                  class="jsx-73373418f14ff6c link-user-profile"
                  href="/profile?githubId=torvalds"
                  target="_blank"
                >
                  torvalds
                </a>
                 
                <a
                  class="jsx-73373418f14ff6c link-user-github"
                  href="https://github.com/torvalds"
                  target="_blank"
                >
                  <span
                    aria-label="github"
                    class="anticon anticon-github"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="github"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M511.6 76.3C264.3 76.2 64 276.4 64 523.5 64 718.9 189.3 885 363.8 946c23.5 5.9 19.9-10.8 19.9-22.2v-77.5c-135.7 15.9-141.2-73.9-150.3-88.9C215 726 171.5 718 184.5 703c30.9-15.9 62.4 4 98.9 57.9 26.4 39.1 77.9 32.5 104 26 5.7-23.5 17.9-44.5 34.7-60.8-140.6-25.2-199.2-111-199.2-213 0-49.5 16.3-95 48.3-131.7-20.4-60.5 1.9-112.3 4.9-120 58.1-5.2 118.5 41.6 123.2 45.3 33-8.9 70.7-13.6 112.9-13.6 42.4 0 80.2 4.9 113.5 13.9 11.3-8.6 67.3-48.8 121.3-43.9 2.9 7.7 24.7 58.3 5.5 118 32.4 36.8 48.9 82.7 48.9 132.3 0 102.2-59 188.1-200 212.9a127.5 127.5 0 0138.1 91v112.5c.8 9 0 17.9 15 17.9 177.1-59.7 304.6-227 304.6-424.1 0-247.2-200.4-447.3-447.5-447.3z"
                      />
                    </svg>
                  </span>
                </a>
              </div>
            </div>
            <div
              class="ant-row"
            >
              <span
                class="ant-typography ant-typography-secondary"
                style="margin-bottom: 8px; font-size: 12px;"
              >
                2022-08-27 09:51
              </span>
            </div>
            <div
              class="ant-row ant-row-middle"
              style="margin-left: -2px; margin-right: -2px;"
            >
              <div
                class="ant-col"
                style="padding-left: 2px; padding-right: 2px;"
              >
                <span
                  aria-label="star"
                  class="anticon anticon-star"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="star"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512.5 190.4l-94.4 191.3-211.2 30.7 152.8 149-36.1 210.3 188.9-99.3 188.9 99.2-36.1-210.3 152.8-148.9-211.2-30.7z"
                      fill="#f6ffed"
                    />
                    <path
                      d="M908.6 352.8l-253.9-36.9L541.2 85.8c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L370.3 315.9l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1L239 839.4a31.95 31.95 0 0046.4 33.7l227.1-119.4 227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3zM665.3 561.3l36.1 210.3-188.9-99.2-188.9 99.3 36.1-210.3-152.8-149 211.2-30.7 94.4-191.3 94.4 191.3 211.2 30.7-152.8 148.9z"
                      fill="#52c41a"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="ant-col"
                style="padding-left: 2px; padding-right: 2px;"
              >
                <span
                  class="ant-typography"
                >
                  100
                </span>
              </div>
            </div>
            <div
              class="ant-row"
              style="margin-bottom: 10px;"
            >
              <span
                class="ant-typography ant-typography-secondary"
                style="font-size: 12px; line-height: 12px;"
              >
                maximum score: 
                100
              </span>
            </div>
            <div
              class="ant-row"
              style="margin-bottom: 10px;"
            >
              <button
                class="ant-btn ant-btn-default"
                type="button"
              >
                <span>
                  Show detailed feedback
                </span>
              </button>
            </div>
            <div
              class="ant-row"
            >
              <span
                class="ant-typography"
              >
                <p>
                  Great job, you better quit cross stitching and start programming.
                </p>
              </span>
            </div>
            <div
              class="ant-row"
            >
              <div
                class="ant-typography"
                style="margin: 0px;"
              >
                Student Discord:
                 
                <a
                  class="ant-typography"
                  href="https://discordapp.com/users/123456789012345678"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  @LinusTorvalds#234
                </a>
                 
                <button
                  class="ant-btn ant-btn-dashed ant-btn-icon-only"
                  type="button"
                >
                  <span
                    aria-label="copy"
                    class="anticon anticon-copy"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="copy"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M232 706h142c22.1 0 40 17.9 40 40v142h250V264H232v442z"
                        fill="#e6f7ff"
                      />
                      <path
                        d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32z"
                        fill="#1890ff"
                      />
                      <path
                        d="M704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                        fill="#1890ff"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CrossCheckComments Should render correctly if there's no comments 1`] = `<div />`;
